--- a/css/product.css
+++ b/css/product.css
@@ -145,8 +145,8 @@
 }
 
 .product_link_block .product_link {
-    --img-ico-on: url('/images/icon/ico_kinder_on.png');
-    --img-ico-off: url('/images/icon/ico_kinder_off.png');
+    --img-ico-on: url('../../images/icon/ico_kinder_on.png');
+    --img-ico-off: url('../../images/icon/ico_kinder_off.png');
     width: 7em;
     background-color: var(--gray-50);
     font-size: 1.2rem;
@@ -195,27 +195,27 @@
 
 .product_link_block .product_link.element {
     --bg-active: var(--green-400);
-    --img-ico-on: url('/images/icon/ico_element_on.png');
-    --img-ico-off: url('/images/icon/ico_element_off.png');
+    --img-ico-on: url('../../images/icon/ico_element_on.png');
+    --img-ico-off: url('../../images/icon/ico_element_off.png');
 }
 
 .product_link_block .product_link.library {
     --bg-active: var(--purple);
-    --img-ico-on: url('/images/icon/ico_library_on.png');
-    --img-ico-off: url('/images/icon/ico_library_off.png');
+    --img-ico-on: url('../../images/icon/ico_library_on.png');
+    --img-ico-off: url('../../images/icon/ico_library_off.png');
 }
 
 /* kinder */
 .kinder,
 .kinder_wrapper {
-    --bg-visual: url('/images/product/bg_kinder.png');
+    --bg-visual: url('../../images/product/bg_kinder.png');
 
     --font-point: var(--red-500); /* 기본 강조 컬러 init */
     --font-point-title: var(--red-500); /* 메인 타이틀 포인트 컬러 */
     --font-point-desc: var(--red-600); /* 메인 desc 포인트 컬러 */
     --font-point-sub-title: var(--red-600); /* 메인 sub title 포인트 컬러 */
     --active-tab-video: var(--red-500);
-    --img-bubble: url('/images/icon/ico_bubble_kinder.png');
+    --img-bubble: url('../../images/icon/ico_bubble_kinder.png');
     --active-tab-step: var(--red-700);
     --active-tab-step-name: var(--yellow-200);
     --active-tab-step2: var(--blue-500);
@@ -228,7 +228,7 @@
     --bg-thumb: var(--red-100);
     --bg-border-title: var(--red-200);
     --bg-program-tag: var(--red-400);
-    --img-ico-check:  url('/images/icon/ico_check_red.png');
+    --img-ico-check:  url('../../images/icon/ico_check_red.png');
     /* swiper */
     --active-swiper-bullet: var(--red-600);
 }
@@ -240,21 +240,21 @@
     --bg-thumb: var(--red-100);
     --bg-border-title: var(--blue-200);
     --bg-program-tag: var(--blue-300);
-    --img-ico-check:  url('/images/icon/ico_check_blue.png');
+    --img-ico-check:  url('../../images/icon/ico_check_blue.png');
     /* swiper */
     --active-swiper-bullet: var(--blue-500);
 }
 
 .element,
 .element_wrapper {
-    --bg-visual: url('/images/product/bg_element.png');
+    --bg-visual: url('../../images/product/bg_element.png');
 
     --font-point: var(--green-700); /* 기본 강조 컬러 init */
     --font-point-title: var(--green-700); /* 메인 타이틀 포인트 컬러 */
     --font-point-desc: var(--green-700); /* 메인 desc 포인트 컬러 */
     --font-point-sub-title: var(--green-650); /* 메인 sub title 포인트 컬러 */
     --active-tab-video: var(--green-700);
-    --img-bubble: url('/images/icon/ico_bubble_element.png');
+    --img-bubble: url('../../images/icon/ico_bubble_element.png');
     --active-tab-step: var(--green-200);
     --active-tab-step-name: var(--green-850);
     --active-tab-step2: var(--sky-300);
@@ -267,7 +267,7 @@
     --bg-thumb: var(--green-30);
     --bg-border-title: var(--green-100);
     --bg-program-tag: var(--green-600);
-    --img-ico-check:  url('/images/icon/ico_check_green.png');
+    --img-ico-check:  url('../../images/icon/ico_check_green.png');
     /* swiper */
     --active-swiper-bullet: var(--green-650);
     --swiper-pagination-bullet-inactive-color: #e9e9e9;
@@ -282,7 +282,7 @@
     --bg-thumb: var(--sky-100);
     --bg-border-title: var(--sky-200);
     --bg-program-tag: var(--sky-500);
-    --img-ico-check:  url('/images/icon/ico_check_sky.png');
+    --img-ico-check:  url('../../images/icon/ico_check_sky.png');
     /* swiper */
     --active-swiper-bullet: var(--sky-600);
     --swiper-pagination-bullet-inactive-color: #e9e9e9;
@@ -292,7 +292,7 @@
 
 .library,
 .library_wrapper {
-    --bg-visual: url('/images/product/bg_library.png');
+    --bg-visual: url('../../images/product/bg_library.png');
 
     --font-point: #d32727; /* 기본 강조 컬러 init */
     --font-point-title: #d32727; /* 메인 타이틀 포인트 컬러 */
@@ -323,8 +323,8 @@
 .kinder.freetrial,
 .kinder_wrapper.freetrial {
     --bg-visual: #feeced;
-    --ico-visual-01 : url('/images/product/freetrial/kinder/bg_visual_01.png');
-    --ico-visual-02 : url('/images/product/freetrial/kinder/bg_visual_02.png');
+    --ico-visual-01 : url('../../images/product/freetrial/kinder/bg_visual_01.png');
+    --ico-visual-02 : url('../../images/product/freetrial/kinder/bg_visual_02.png');
 
     --bg-btn: var(--red-500);
 
@@ -347,8 +347,8 @@
 .element.freetrial,
 .element_wrapper.freetrial {
     --bg-visual: #e8f6cc;
-    --ico-visual-01 : url('/images/product/freetrial/element/bg_visual_01.png');
-    --ico-visual-02 : url('/images/product/freetrial/element/bg_visual_02.png');
+    --ico-visual-01 : url('../../images/product/freetrial/element/bg_visual_01.png');
+    --ico-visual-02 : url('../../images/product/freetrial/element/bg_visual_02.png');
 
     --bg-btn: var(--green-400);
     --font-point: var(--green-400); /* 기본 강조 컬러 init */
@@ -451,7 +451,7 @@
 }
 
 .product_feature_wrapper {
-    background: var(--bg-primary) url('/images/product/bg_flower.png') left bottom no-repeat;
+    background: var(--bg-primary) url('../../images/product/bg_flower.png') left bottom no-repeat;
     background-blend-mode : luminosity;
 }
 
@@ -626,7 +626,7 @@
     position: absolute;
     right: 0;
     bottom: 0;
-    background: var(--bg-primary) url('/images/product/bg_wave.png') right bottom no-repeat;
+    background: var(--bg-primary) url('../../images/product/bg_wave.png') right bottom no-repeat;
     display: block;
     width: clamp(90%, 1840px ,100%);
     height: 70%;
@@ -1319,7 +1319,7 @@
     display: inline-block;
     width: 12em;
     height: 17.4em;
-    background: url('/images/product/library/bg_step02.png') center center no-repeat;
+    background: url('../../images/product/library/bg_step02.png') center center no-repeat;
     background-size: contain;
 }
 
@@ -1687,7 +1687,7 @@
     top: calc(20% - 0.55em);
     width: 1.2em;
     height: 1.2em;
-    background: url('/images/icon/ico_arrow_next.png') no-repeat;
+    background: url('../../images/icon/ico_arrow_next.png') no-repeat;
     background-size: 100%;
     z-index: 2;
 }
@@ -2063,7 +2063,7 @@
     }
 
     .pen_banner_wrapper {
-        background-image: url('/images/product/m_bg_pen_banner.png');
+        background-image: url('../../images/product/m_bg_pen_banner.png');
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
