--- a/css/modal.css
+++ b/css/modal.css
@@ -153,6 +153,7 @@
     display: flex;
     flex-direction: column;
     gap: 1.2em;
+    margin-inline: auto;
 }
 
 .scroll_wrapper.w_90 { width: 90%; }
